# markstr

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: bitcoind-tests-image.yml  test.yml
bitcoind-tests/: Cargo.toml  Dockerfile  Makefile  README.md
bitcoind-tests/src/: lib.rs  test_core.rs
docs/: ARCHITECTURE.md
examples/: simple_market.rs
markstr-cli/: Cargo.toml
markstr-cli/src/: main.rs
markstr-core/: Cargo.toml  README.md
markstr-core/src/: deposit.rs  error.rs  lib.rs  market.rs  nostr.rs  pool.rs  protocol.rs  test_utils.rs  utils.rs  withdraw.rs
markstr-wasm/: Cargo.toml
markstr-wasm/src/: lib.rs
webapp/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
webapp/src/: App.jsx  index.css  main.jsx
webapp/src/components/Dashboard/: Dashboard.jsx
webapp/src/components/Layout/: Layout.jsx
webapp/src/components/Market/: BettingInterface.jsx  MarketCreator.jsx  MarketList.jsx  PayoutCenter.jsx
webapp/src/components/Oracle/: OraclePanel.jsx
webapp/src/components/Roles/: RoleManager.jsx
webapp/src/components/Transactions/: TransactionHistory.jsx
webapp/src/components/UI/: Button.jsx  Card.jsx  LoadingSpinner.jsx
webapp/src/context/: BitcoinContext.jsx  MarketContext.jsx  NostrContext.jsx  RoleContext.jsx
webapp/src/services/: BitcoinRPC.js  NostrService.js  PredictionMarketService.js
yew-webapp/: Cargo.toml  README.md  Trunk.toml  index.html  input.css
yew-webapp/src/: main.rs
yew-webapp/src/components/: dashboard.rs  layout.rs  mod.rs
yew-webapp/src/components/market/: market_creator.rs  market_list.rs  mod.rs
yew-webapp/src/components/ui/: button.rs  card.rs  mod.rs  spinner.rs
yew-webapp/src/components/wallet/: mod.rs  transactions.rs
yew-webapp/src/context/: mod.rs
yew-webapp/src/context/market/: provider.rs
yew-webapp/src/context/wallet/: mod.rs  persistor.rs  provider.rs
