[package]
name = "markstr-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core Rust library for Nostr-based Bitcoin prediction markets"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core Bitcoin functionality
bitcoin.workspace = true
nostr.workspace = true

# Cryptography
secp256k1.workspace = true
hex.workspace = true
sha2.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true

# Async runtime
tokio.workspace = true

[features]
default = ["std"]
std = []