[package]
name = "yew-webapp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Yew-based frontend for Markstr."
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

idb = { version = "0.6.4" }
web-sys.workspace = true

# PWA Framework
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

# Nostr 
nostr-minions = "0.1.18"

# Wallet
bitcoin.workspace = true
bdk_wallet = { version = "1.2.0", features = ["keys-bip39"] }
bdk_esplora = { version = "0.20.1", features = ["async-https-rustls", "tokio"], default-features = false }

# Async  
tokio = { version = "1.0", features = ["sync"] }
serde-wasm-bindgen = "0.6.5"

